add spectra merging to ims raw data overview